feat: add facultades and carreras CRUD
